# Retrieval-Augmented-Generation-based-CHATBOT-

./: MIGRATION_GUIDE.md  README.md  app.py  data_chunking.py  data_loading_and_cleaning.py  main.py  pyproject.toml  rag_chatbot.Modelfile  rag_pipeline.py  requirements.txt  setup_ollama.sh  simple_app.py  tempCodeRunnerFile.py  test_ollama_setup.py  test_setup.py  vector_db.py  verify_migration.py
chunks/: AI Training Document.pdf_chunk_0.txt  AI Training Document.pdf_chunk_1.txt  AI Training Document.pdf_chunk_10.txt  AI Training Document.pdf_chunk_11.txt  AI Training Document.pdf_chunk_12.txt  AI Training Document.pdf_chunk_13.txt  AI Training Document.pdf_chunk_14.txt  AI Training Document.pdf_chunk_15.txt  AI Training Document.pdf_chunk_16.txt  AI Training Document.pdf_chunk_17.txt  AI Training Document.pdf_chunk_18.txt  AI Training Document.pdf_chunk_19.txt  AI Training Document.pdf_chunk_2.txt  AI Training Document.pdf_chunk_20.txt  AI Training Document.pdf_chunk_21.txt  AI Training Document.pdf_chunk_22.txt  AI Training Document.pdf_chunk_23.txt  AI Training Document.pdf_chunk_24.txt  AI Training Document.pdf_chunk_25.txt  AI Training Document.pdf_chunk_26.txt  AI Training Document.pdf_chunk_27.txt  AI Training Document.pdf_chunk_28.txt  AI Training Document.pdf_chunk_29.txt  AI Training Document.pdf_chunk_3.txt  AI Training Document.pdf_chunk_30.txt  AI Training Document.pdf_chunk_31.txt  AI Training Document.pdf_chunk_32.txt  AI Training Document.pdf_chunk_33.txt  AI Training Document.pdf_chunk_34.txt  AI Training Document.pdf_chunk_35.txt  AI Training Document.pdf_chunk_36.txt  AI Training Document.pdf_chunk_37.txt  AI Training Document.pdf_chunk_38.txt  AI Training Document.pdf_chunk_39.txt  (+34 more)
(+10 files in other folders)
